# mavlink-osd

./: CMakeLists.txt  font.c  font.h  layout.c  layout.h  main.c  matrix.c  matrix.h  mavlink_thread.c  mavlink_thread.h  render.c  render.h  resource.h  shader.c  shader.h  shape.c  shape.h  telem_data.c  telem_data.h  texture.c  texture.h  ui.c  ui.h  ui_thread.c  ui_thread.h  utils.c  utils.h  widget.h  xplane11_thread.c  xplane11_thread.h
fonts/: font.rgba
shaders/: font.frag  font.vert  measure.frag  measure.vert  solid.frag  solid.vert
widgets/: widget_attitude.c  widget_attitude.h  widget_bank_indicator.c  widget_bank_indicator.h  widget_heading.c  widget_heading.h  widget_tape.c  widget_tape.h  widget_text.c  widget_text.h
